# stream-resource

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  COMMERCIAL.md  LICENSE  LICENSE-COMMERCIAL  NOTICE  README.md  commitlint.config.cjs  deployment-urls.json  eslint.config.mjs  gtm.md  nx.json  package-lock.json  package.json  pnpm-lock.yaml  project.json  tsconfig.base.json  tsconfig.json  tsconfig.tsbuildinfo  vercel.cockpit.json  vercel.demo.json  vercel.examples.json  vercel.json  vite.config.mts
.claude/: launch.json
cockpit/: README.md
cockpit/langgraph/persistence/python/: langgraph.json  package.json  project.json  pyproject.toml  tsconfig.json
cockpit/langgraph/persistence/python/docs/: guide.md
cockpit/langgraph/persistence/python/prompts/: persistence.md
cockpit/langgraph/persistence/python/src/: graph.py  index.ts
cowork/: README.md
docs/: RELEASE.md  limitations.md  release-runbook.md
examples/chat-agent/: .env.example  .gitignore  langgraph.json  project.json  pyproject.toml
examples/chat-agent/src/chat_agent/: agent.py  config.py
examples/chat-agent/tests/: test_agent_integration.py  test_agent_smoke.py
examples/chat/python/: .env.example  README.md  langgraph.json  project.json  pyproject.toml
examples/chat/python/src/: graph.py
examples/chat/python/src/schemas/: __init__.py  a2ui_v1.py  json_render.py
examples/chat/python/src/streaming/: a2ui_partial_handler.py  envelope_tool.py
examples/chat/python/tests/: test_a2ui_partial_handler.py  test_envelope_tool.py  test_graph_smoke.py  test_streaming_smoke.py
marketing/: .env.example  README.md
migrations/: 0001_rate_limit_events.sql
scripts/: assemble-demo.ts  assemble-examples.ts  ci-scope.mjs  ci-scope.spec.mjs  ci-workflow.spec.mjs  (+16 more)
(+2700 files in other folders)
