[project]
name = "examples-chat-python"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.3",
    "langchain-openai>=0.3",
    "langgraph-api>=0.8.7",
    "python-dotenv>=1.0",
]

[tool.uv]
dev-dependencies = [
    "langgraph-cli[inmem]>=0.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
markers = [
    "smoke: smoke tests that run on every CI build",
]
asyncio_mode = "auto"
